clusters/hybrid01/config/headscale/headscale-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  namespace: headscale
  annotations:
      configmap.reloader.stakater.com/reload: "headscale"
  labels:
    app: headscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      containers:
      - name: headscale
        image: headscale/headscale:v0.26.1
        command: ["headscale", "serve"]
        ports:
        - name: headscale
          protocol: TCP
          containerPort: 8080
        - name: metrics
          protocol: TCP
          containerPort: 9090
        - name: derp
          protocol: UDP
          containerPort: 3478
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          limits:
            memory: 100Mi
        volumeMounts:
          - name: headscale-cm
            mountPath: /etc/headscale/config.yaml
            subPath: config.yaml
          - name: headscale-volume
            mountPath: /data/headscale
          - name: headscale-db
            mountPath: /db
          - name: headscale-oidc-secret
            mountPath: /secrets
      volumes:
        - name: headscale-cm
          configMap:
            name: headscale
        - name: headscale-oidc-secret
          secret:
            secretName: headscale-oidc-secret
        - name: headscale-volume
          emptyDir: 
            medium: Memory
        - name: headscale-db
          persistentVolumeClaim:
            claimName: headscale
