clusters/hybrid01/config/headscale/headscale-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
  labels:
    app: headscale
spec:
  type: ClusterIP
  selector:
    app: headscale
  ports:
    - name: headscale
      protocol: TCP
      port: 8080
      targetPort: headscale
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-derp
  namespace: headscale
  annotations:
    metallb.universe.tf/loadBalancerIPs: "116.203.211.246"
    metallb.universe.tf/allow-shared-ip: "shared-ip-116.203.211.246"
  labels:
    app: headscale
spec:
  type: LoadBalancer
  selector:
    app: headscale
  ports:
    - name: derp
      protocol: UDP
      port: 3478
      targetPort: derp
